--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -6,15 +6,12 @@
   <mat-card class="profile-card">
     <h1>Profil</h1>
     <mat-card-header>
-      <mat-card-title>
-    <strong>Név: </strong>{{ userData.name.lastname }} {{ userData.name.firstname }}
-      </mat-card-title>
+        <p><strong>Név: </strong>{{ userData.name.lastname }} {{ userData.name.firstname }}</p>
     </mat-card-header>
-
     @if (!editMode) {
-      <mat-card-content>
-        <p><strong>Email:</strong> {{ userData.email }}</p>
-      </mat-card-content>
+      <mat-card-header>
+        <p><strong>Email: </strong> {{ userData.email }}</p>
+      </mat-card-header>
     } @else {
       <mat-card-content>
         <form [formGroup]="profileForm" (ngSubmit)="saveChanges()">
